qface/idl/parser/TParser.py
# Generated from T.g4 by ANTLR 4.5.2
# encoding: utf-8
from antlr4 import *
from io import StringIO



class TParser ( Parser ):

    grammarFileName = "T.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'import'", "';'", "'package'", "'service'", 
                     "'{'", "'}'", "'event'", "'void'", "'('", "')'", "'readonly'", 
                     "','", "'bool'", "'int'", "'real'", "'string'", "'list'", 
                     "'<'", "'>'", "'model'", "'struct'", "'enum'", "'flag'", 
                     "'='" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "INTCONSTANT", "HEXCONSTANT", "IDENTIFIER", 
                      "DOCCOMMENT", "WHITESPACE", "COMMENT", "MULTICOMM" ]

    RULE_documentSymbol = 0
    RULE_headerSymbol = 1
    RULE_importSymbol = 2
    RULE_packageSymbol = 3
    RULE_definitionSymbol = 4
    RULE_serviceSymbol = 5
    RULE_memberSymbol = 6
    RULE_operationSymbol = 7
    RULE_attributeSymbol = 8
    RULE_parameterSymbol = 9
    RULE_typeSymbol = 10
    RULE_complexTypeSymbol = 11
    RULE_primitiveTypeSymbol = 12
    RULE_listTypeSymbol = 13
    RULE_modelTypeSymbol = 14
    RULE_structSymbol = 15
    RULE_structMemberSymbol = 16
    RULE_enumSymbol = 17
    RULE_enumTypeSymbol = 18
    RULE_enumMemberSymbol = 19
    RULE_intSymbol = 20

    ruleNames =  [ "documentSymbol", "headerSymbol", "importSymbol", "packageSymbol", 
                   "definitionSymbol", "serviceSymbol", "memberSymbol", 
                   "operationSymbol", "attributeSymbol", "parameterSymbol", 
                   "typeSymbol", "complexTypeSymbol", "primitiveTypeSymbol", 
                   "listTypeSymbol", "modelTypeSymbol", "structSymbol", 
                   "structMemberSymbol", "enumSymbol", "enumTypeSymbol", 
                   "enumMemberSymbol", "intSymbol" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    INTCONSTANT=25
    HEXCONSTANT=26
    IDENTIFIER=27
    DOCCOMMENT=28
    WHITESPACE=29
    COMMENT=30
    MULTICOMM=31

    def __init__(self, input:TokenStream):
        super().__init__(input)
        self.checkVersion("4.5.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class DocumentSymbolContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def headerSymbol(self):
            return self.getTypedRuleContext(TParser.HeaderSymbolContext,0)


        def definitionSymbol(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TParser.DefinitionSymbolContext)
            else:
                return self.getTypedRuleContext(TParser.DefinitionSymbolContext,i)


        def getRuleIndex(self):
            return TParser.RULE_documentSymbol

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDocumentSymbol" ):
                listener.enterDocumentSymbol(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDocumentSymbol" ):
                listener.exitDocumentSymbol(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDocumentSymbol" ):
                return visitor.visitDocumentSymbol(self)
            else:
                return visitor.visitChildren(self)




    def documentSymbol(self):

        localctx = TParser.DocumentSymbolContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_documentSymbol)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 42
            self.headerSymbol()
            self.state = 46
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << TParser.T__3) | (1 << TParser.T__20) | (1 << TParser.T__21) | (1 << TParser.T__22) | (1 << TParser.DOCCOMMENT))) != 0):
                self.state = 43
                self.definitionSymbol()
                self.state = 48
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class HeaderSymbolContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def packageSymbol(self):
            return self.getTypedRuleContext(TParser.PackageSymbolContext,0)


        def importSymbol(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TParser.ImportSymbolContext)
            else:
                return self.getTypedRuleContext(TParser.ImportSymbolContext,i)


        def getRuleIndex(self):
            return TParser.RULE_headerSymbol

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterHeaderSymbol" ):
                listener.enterHeaderSymbol(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitHeaderSymbol" ):
                listener.exitHeaderSymbol(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitHeaderSymbol" ):
                return visitor.visitHeaderSymbol(self)
            else:
                return visitor.visitChildren(self)




    def headerSymbol(self):

        localctx = TParser.HeaderSymbolContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_headerSymbol)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 49
            self.packageSymbol()
            self.state = 53
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==TParser.T__0:
                self.state = 50
                self.importSymbol()
                self.state = 55
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ImportSymbolContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.name = None # Token

        def IDENTIFIER(self):
            return self.getToken(TParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return TParser.RULE_importSymbol

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterImportSymbol" ):
                listener.enterImportSymbol(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitImportSymbol" ):
                listener.exitImportSymbol(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitImportSymbol" ):
                return visitor.visitImportSymbol(self)
            else:
                return visitor.visitChildren(self)




    def importSymbol(self):

        localctx = TParser.ImportSymbolContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_importSymbol)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 56
            self.match(TParser.T__0)
            self.state = 57
            localctx.name = self.match(TParser.IDENTIFIER)
            self.state = 58
            self.match(TParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class PackageSymbolContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.comment = None # Token
            self.name = None # Token

        def IDENTIFIER(self):
            return self.getToken(TParser.IDENTIFIER, 0)

        def DOCCOMMENT(self):
            return self.getToken(TParser.DOCCOMMENT, 0)

        def getRuleIndex(self):
            return TParser.RULE_packageSymbol

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPackageSymbol" ):
                listener.enterPackageSymbol(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPackageSymbol" ):
                listener.exitPackageSymbol(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPackageSymbol" ):
                return visitor.visitPackageSymbol(self)
            else:
                return visitor.visitChildren(self)




    def packageSymbol(self):

        localctx = TParser.PackageSymbolContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_packageSymbol)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 61
            _la = self._input.LA(1)
            if _la==TParser.DOCCOMMENT:
                self.state = 60
                localctx.comment = self.match(TParser.DOCCOMMENT)


            self.state = 63
            self.match(TParser.T__2)
            self.state = 64
            localctx.name = self.match(TParser.IDENTIFIER)
            self.state = 65
            self.match(TParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DefinitionSymbolContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def serviceSymbol(self):
            return self.getTypedRuleContext(TParser.ServiceSymbolContext,0)


        def structSymbol(self):
            return self.getTypedRuleContext(TParser.StructSymbolContext,0)


        def enumSymbol(self):
            return self.getTypedRuleContext(TParser.EnumSymbolContext,0)


        def getRuleIndex(self):
            return TParser.RULE_definitionSymbol

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDefinitionSymbol" ):
                listener.enterDefinitionSymbol(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDefinitionSymbol" ):
                listener.exitDefinitionSymbol(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDefinitionSymbol" ):
                return visitor.visitDefinitionSymbol(self)
            else:
                return visitor.visitChildren(self)




    def definitionSymbol(self):

        localctx = TParser.DefinitionSymbolContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_definitionSymbol)
        try:
            self.state = 70
            self._errHandler.sync(self);
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 67
                self.serviceSymbol()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 68
                self.structSymbol()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 69
                self.enumSymbol()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ServiceSymbolContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.comment = None # Token
            self.name = None # Token

        def IDENTIFIER(self):
            return self.getToken(TParser.IDENTIFIER, 0)

        def memberSymbol(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TParser.MemberSymbolContext)
            else:
                return self.getTypedRuleContext(TParser.MemberSymbolContext,i)


        def DOCCOMMENT(self):
            return self.getToken(TParser.DOCCOMMENT, 0)

        def getRuleIndex(self):
            return TParser.RULE_serviceSymbol

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterServiceSymbol" ):
                listener.enterServiceSymbol(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitServiceSymbol" ):
                listener.exitServiceSymbol(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitServiceSymbol" ):
                return visitor.visitServiceSymbol(self)
            else:
                return visitor.visitChildren(self)




    def serviceSymbol(self):

        localctx = TParser.ServiceSymbolContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_serviceSymbol)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 73
            _la = self._input.LA(1)
            if _la==TParser.DOCCOMMENT:
                self.state = 72
                localctx.comment = self.match(TParser.DOCCOMMENT)


            self.state = 75
            self.match(TParser.T__3)
            self.state = 76
            localctx.name = self.match(TParser.IDENTIFIER)
            self.state = 77
            self.match(TParser.T__4)
            self.state = 81
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << TParser.T__6) | (1 << TParser.T__7) | (1 << TParser.T__10) | (1 << TParser.T__12) | (1 << TParser.T__13) | (1 << TParser.T__14) | (1 << TParser.T__15) | (1 << TParser.T__16) | (1 << TParser.T__19) | (1 << TParser.IDENTIFIER) | (1 << TParser.DOCCOMMENT))) != 0):
                self.state = 78
                self.memberSymbol()
                self.state = 83
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 84
            self.match(TParser.T__5)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class MemberSymbolContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def operationSymbol(self):
            return self.getTypedRuleContext(TParser.OperationSymbolContext,0)


        def attributeSymbol(self):
            return self.getTypedRuleContext(TParser.AttributeSymbolContext,0)


        def getRuleIndex(self):
            return TParser.RULE_memberSymbol

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMemberSymbol" ):
                listener.enterMemberSymbol(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMemberSymbol" ):
                listener.exitMemberSymbol(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMemberSymbol" ):
                return visitor.visitMemberSymbol(self)
            else:
                return visitor.visitChildren(self)




    def memberSymbol(self):

        localctx = TParser.MemberSymbolContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_memberSymbol)
        try:
            self.state = 88
            self._errHandler.sync(self);
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 86
                self.operationSymbol()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 87
                self.attributeSymbol()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class OperationSymbolContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.comment = None # Token
            self.isEvent = None # Token
            self.name = None # Token

        def IDENTIFIER(self):
            return self.getToken(TParser.IDENTIFIER, 0)

        def typeSymbol(self):
            return self.getTypedRuleContext(TParser.TypeSymbolContext,0)


        def parameterSymbol(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TParser.ParameterSymbolContext)
            else:
                return self.getTypedRuleContext(TParser.ParameterSymbolContext,i)


        def DOCCOMMENT(self):
            return self.getToken(TParser.DOCCOMMENT, 0)

        def getRuleIndex(self):
            return TParser.RULE_operationSymbol

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOperationSymbol" ):
                listener.enterOperationSymbol(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOperationSymbol" ):
                listener.exitOperationSymbol(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOperationSymbol" ):
                return visitor.visitOperationSymbol(self)
            else:
                return visitor.visitChildren(self)




    def operationSymbol(self):

        localctx = TParser.OperationSymbolContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_operationSymbol)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 91
            _la = self._input.LA(1)
            if _la==TParser.DOCCOMMENT:
                self.state = 90
                localctx.comment = self.match(TParser.DOCCOMMENT)


            self.state = 94
            _la = self._input.LA(1)
            if _la==TParser.T__6:
                self.state = 93
                localctx.isEvent = self.match(TParser.T__6)


            self.state = 98
            token = self._input.LA(1)
            if token in [TParser.T__12, TParser.T__13, TParser.T__14, TParser.T__15, TParser.T__16, TParser.T__19, TParser.IDENTIFIER]:
                self.state = 96
                self.typeSymbol()

            elif token in [TParser.T__7]:
                self.state = 97
                self.match(TParser.T__7)

            else:
                raise NoViableAltException(self)

            self.state = 100
            localctx.name = self.match(TParser.IDENTIFIER)
            self.state = 101
            self.match(TParser.T__8)
            self.state = 105
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << TParser.T__12) | (1 << TParser.T__13) | (1 << TParser.T__14) | (1 << TParser.T__15) | (1 << TParser.T__16) | (1 << TParser.T__19) | (1 << TParser.IDENTIFIER))) != 0):
                self.state = 102
                self.parameterSymbol()
                self.state = 107
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 108
            self.match(TParser.T__9)
            self.state = 109
            self.match(TParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class AttributeSymbolContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.comment = None # Token
            self.isReadOnly = None # Token
            self.name = None # Token

        def typeSymbol(self):
            return self.getTypedRuleContext(TParser.TypeSymbolContext,0)


        def IDENTIFIER(self):
            return self.getToken(TParser.IDENTIFIER, 0)

        def DOCCOMMENT(self):
            return self.getToken(TParser.DOCCOMMENT, 0)

        def getRuleIndex(self):
            return TParser.RULE_attributeSymbol

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAttributeSymbol" ):
                listener.enterAttributeSymbol(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAttributeSymbol" ):
                listener.exitAttributeSymbol(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAttributeSymbol" ):
                return visitor.visitAttributeSymbol(self)
            else:
                return visitor.visitChildren(self)




    def attributeSymbol(self):

        localctx = TParser.AttributeSymbolContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_attributeSymbol)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 112
            _la = self._input.LA(1)
            if _la==TParser.DOCCOMMENT:
                self.state = 111
                localctx.comment = self.match(TParser.DOCCOMMENT)


            self.state = 115
            _la = self._input.LA(1)
            if _la==TParser.T__10:
                self.state = 114
                localctx.isReadOnly = self.match(TParser.T__10)


            self.state = 117
            self.typeSymbol()
            self.state = 118
            localctx.name = self.match(TParser.IDENTIFIER)
            self.state = 119
            self.match(TParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ParameterSymbolContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.name = None # Token

        def typeSymbol(self):
            return self.getTypedRuleContext(TParser.TypeSymbolContext,0)


        def IDENTIFIER(self):
            return self.getToken(TParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return TParser.RULE_parameterSymbol

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParameterSymbol" ):
                listener.enterParameterSymbol(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParameterSymbol" ):
                listener.exitParameterSymbol(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParameterSymbol" ):
                return visitor.visitParameterSymbol(self)
            else:
                return visitor.visitChildren(self)




    def parameterSymbol(self):

        localctx = TParser.ParameterSymbolContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_parameterSymbol)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 121
            self.typeSymbol()
            self.state = 122
            localctx.name = self.match(TParser.IDENTIFIER)
            self.state = 124
            _la = self._input.LA(1)
            if _la==TParser.T__11:
                self.state = 123
                self.match(TParser.T__11)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class TypeSymbolContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def primitiveTypeSymbol(self):
            return self.getTypedRuleContext(TParser.PrimitiveTypeSymbolContext,0)


        def complexTypeSymbol(self):
            return self.getTypedRuleContext(TParser.ComplexTypeSymbolContext,0)


        def listTypeSymbol(self):
            return self.getTypedRuleContext(TParser.ListTypeSymbolContext,0)


        def modelTypeSymbol(self):
            return self.getTypedRuleContext(TParser.ModelTypeSymbolContext,0)


        def getRuleIndex(self):
            return TParser.RULE_typeSymbol

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTypeSymbol" ):
                listener.enterTypeSymbol(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTypeSymbol" ):
                listener.exitTypeSymbol(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTypeSymbol" ):
                return visitor.visitTypeSymbol(self)
            else:
                return visitor.visitChildren(self)




    def typeSymbol(self):

        localctx = TParser.TypeSymbolContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_typeSymbol)
        try:
            self.state = 130
            token = self._input.LA(1)
            if token in [TParser.T__12, TParser.T__13, TParser.T__14, TParser.T__15]:
                self.enterOuterAlt(localctx, 1)
                self.state = 126
                self.primitiveTypeSymbol()

            elif token in [TParser.IDENTIFIER]:
                self.enterOuterAlt(localctx, 2)
                self.state = 127
                self.complexTypeSymbol()

            elif token in [TParser.T__16]:
                self.enterOuterAlt(localctx, 3)
                self.state = 128
                self.listTypeSymbol()

            elif token in [TParser.T__19]:
                self.enterOuterAlt(localctx, 4)
                self.state = 129
                self.modelTypeSymbol()

            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ComplexTypeSymbolContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.name = None # Token

        def IDENTIFIER(self):
            return self.getToken(TParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return TParser.RULE_complexTypeSymbol

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComplexTypeSymbol" ):
                listener.enterComplexTypeSymbol(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComplexTypeSymbol" ):
                listener.exitComplexTypeSymbol(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitComplexTypeSymbol" ):
                return visitor.visitComplexTypeSymbol(self)
            else:
                return visitor.visitChildren(self)




    def complexTypeSymbol(self):

        localctx = TParser.ComplexTypeSymbolContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_complexTypeSymbol)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 132
            localctx.name = self.match(TParser.IDENTIFIER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class PrimitiveTypeSymbolContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.name = None # Token


        def getRuleIndex(self):
            return TParser.RULE_primitiveTypeSymbol

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrimitiveTypeSymbol" ):
                listener.enterPrimitiveTypeSymbol(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrimitiveTypeSymbol" ):
                listener.exitPrimitiveTypeSymbol(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrimitiveTypeSymbol" ):
                return visitor.visitPrimitiveTypeSymbol(self)
            else:
                return visitor.visitChildren(self)




    def primitiveTypeSymbol(self):

        localctx = TParser.PrimitiveTypeSymbolContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_primitiveTypeSymbol)
        try:
            self.state = 138
            token = self._input.LA(1)
            if token in [TParser.T__12]:
                self.enterOuterAlt(localctx, 1)
                self.state = 134
                localctx.name = self.match(TParser.T__12)

            elif token in [TParser.T__13]:
                self.enterOuterAlt(localctx, 2)
                self.state = 135
                localctx.name = self.match(TParser.T__13)

            elif token in [TParser.T__14]:
                self.enterOuterAlt(localctx, 3)
                self.state = 136
                localctx.name = self.match(TParser.T__14)

            elif token in [TParser.T__15]:
                self.enterOuterAlt(localctx, 4)
                self.state = 137
                localctx.name = self.match(TParser.T__15)

            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ListTypeSymbolContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.valueType = None # TypeSymbolContext

        def typeSymbol(self):
            return self.getTypedRuleContext(TParser.TypeSymbolContext,0)


        def getRuleIndex(self):
            return TParser.RULE_listTypeSymbol

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterListTypeSymbol" ):
                listener.enterListTypeSymbol(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitListTypeSymbol" ):
                listener.exitListTypeSymbol(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitListTypeSymbol" ):
                return visitor.visitListTypeSymbol(self)
            else:
                return visitor.visitChildren(self)




    def listTypeSymbol(self):

        localctx = TParser.ListTypeSymbolContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_listTypeSymbol)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 140
            self.match(TParser.T__16)
            self.state = 141
            self.match(TParser.T__17)
            self.state = 142
            localctx.valueType = self.typeSymbol()
            self.state = 143
            self.match(TParser.T__18)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ModelTypeSymbolContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.valueType = None # TypeSymbolContext

        def typeSymbol(self):
            return self.getTypedRuleContext(TParser.TypeSymbolContext,0)

